<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20px"
        android:layout_marginTop="20px"
        android:layout_marginRight="50px">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_info_quantidade"
        android:textSize="18dp"/>
        <EditText
            android:id="@+id/main_quant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/main_info_insira"
            android:inputType="number"


            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/main_info_prop"
                android:textSize="18dp"/>
             <EditText
                 android:id="@+id/main_prop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
                 android:hint="@string/main_info_proptxt"
                 android:inputType="textFilter"
                 android:digits="123456789:"
                 android:maxLength="9"
                  />
            <Button
                android:id="@+id/btn_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/main_info_consultar"
                android:background="@color/colorButton"/>

        </LinearLayout>
        <Button
            android:id="@+id/btn_calc"
            android:layout_marginTop="20px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_info_calcular"
            android:background="@color/colorButton"/>

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_marginTop="-80dp"
            android:layout_height="500dp"
            android:src="@drawable/img_combustivel"
            android:layout_gravity="center"/>
    </LinearLayout>

</ScrollView>