<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context=".ListaActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tabela_oleo_1"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginBottom="5dp"
            android:onClick="onClick"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tabela_oleo_2"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginBottom="5dp"
            android:onClick="onClick1"/>/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tabela_oleo_3"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginBottom="5dp"
            android:onClick="onClick2"/>
            />



    </LinearLayout>

</ScrollView>